css/main.css
/* ... */
audio,
canvas,
iframe,
img,
svg,
video {
  vertical-align: middle; }

fieldset {
  border: 0;
  margin: 0;
  padding: 0; }

textarea {
  resize: vertical; }

.browserupgrade {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0; }

a, a:visited {
  color: #1FB7AF;
  text-decoration: none;
  font-weight: 500; }

a:hover {
  color: #59e3dc; }

/* ===== Initializr Styles ==================================================
   Author: Jonathan Verrecchia - verekia.com/initializr/responsive-template
   ========================================================================== */
body {
  font-family: "averta", "avenir", sans-serif;
  font-weight: 200; }

.wrapper {
  width: 90%;
  margin-left: 5%;
  margin-right: 5%; }

section {
  margin-bottom: 3rem; }

/* ===================
    ALL: Orange Theme
   =================== */
.header-container {
  padding: 0;
  width: 100%; }
  .header-container .wrapper {
    padding: 8px 0; }
  .header-container .brand {
    height: 100%;
    width: auto;
    margin: 0 auto;
    position: relative; }
    .header-container .brand .logo {
      display: block;
      max-width: 200px;
      margin: 0 auto; }

.page-content p, .page-content ul, .page-content ol {
  font-weight: 300; }

p {
  margin-left: auto;
  margin-right: auto;
  font-weight: 300; }

.related-posts .d-1of2 {
  margin-bottom: .5em; }
.related-posts a {
  white-space: nowrap; }

a.button, a.button-white {
  border: 1px solid #6A6969;
  color: #6A6969;
  padding: .5em 1em;
  margin: 1em;
  display: inline-block;
  border-radius: 2px; }

a.button:hover, a.button-white:hover {
  background: #6A6969;
  color: white; }

a.button-white {
  border: 1px solid white;
  color: white; }

a.button-white:hover {
  background: white;
  color: black; }

.side-header {
  position: relative; }
  .side-header ul {
    padding-left: 0;
    line-height: 1.2; }
  .side-header li {
    float: left;
    width: 50%;
    display: block;
    margin-bottom: .5em; }
  .side-header h4, .side-header .h4 {
    margin-bottom: .5em;
    font-size: 1em; }

ul.icons {
  list-style-type: none;
  padding-left: 0; }
  ul.icons li img {
    height: 2em;
    line-height: 2em;
    margin-right: .5em; }
  ul.icons li {
    width: 50%;
    display: block;
    float: left;
    padding: .5em 0; }

.max-200 {
  width: 200px;
  max-width: 100%; }

.max-300 {
  width: 300px;
  max-width: 100%; }

.max-500 {
  width: 500px;
  max-width: 100%; }

.max-700 {
  width: 700px;
  max-width: 100%; }

.max-full {
  max-width: 100%;
  margin: 1rem 0; }

img.center {
  display: block;
  margin: 1rem auto; }

img.border {
  border: 1px solid #c4c4c4; }

.img-scroll {
  overflow-y: scroll; }

.seperator {
  margin: 2em 2em;
  background: #919191;
  height: 1px;
  margin-left: auto;
  margin-right: auto; }

.social-media-links {
  z-index: 9999;
  position: relative;
  text-align: center;
  display: block; }
  .social-media-links a, .social-media-links a:visited {
    color: #444444;
    display: inline-block;
    margin: 0 .75em; }
    .social-media-links a img, .social-media-links a:visited img {
      width: 2.5em;
      height: auto;
      fill: currentColor; }
  .social-media-links a:hover {
    color: #1FB7AF; }

ul.cards {
  margin: 1em auto;
  padding-left: 0;
  list-style-type: none; }
  ul.cards li {
    box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.47);
    border-radius: 4px;
    display: block;
    width: 48%;
    float: left;
    color: white;
    border-radius: 5px;
    margin: 1%;
    text-align: center;
    display: flex;
    align-items: center; }
    ul.cards li span {
      width: 100%;
      display: block;
      text-align: center;
      padding: 1em; }
  ul.cards li:nth-child(n) {
    background: #E56566; }
  ul.cards li:nth-child(2n) {
    background: #50B820; }
  ul.cards li:nth-child(3n) {
    background: #E5B465; }
  ul.cards li:nth-child(4n) {
    background: #1FB7AF; }
  ul.cards li:nth-child(5n) {
    background: #50B820; }

ul.cards.large {
  max-width: 750px; }
  ul.cards.large li:before {
    content: "";
    display: block;
    padding-top: 100%; }

.interests .social-media-links {
  padding-bottom: 2em; }

.footer-container h1, .footer-container .h1 {
  font-weight: normal;
  margin-top: 0; }
.footer-container h2, .footer-container .h2 {
  letter-spacing: 2px;
  font-size: 1em;
  font-weight: normal; }

.wrapper .typeform-share.button {
  display: inline-block;
  margin: 1em auto;
  float: none; }

blockquote {
  font-family: "averta", "avenir", sans-serif;
  font-size: 2em;
  letter-spacing: .09em;
  font-weight: 700;
  color: #1FB7AF;
  line-height: 150%;
  text-align: left;
  font-style: italic;
  margin: 2em auto; }

blockquote.gradient {
  background: -webkit-gradient(linear, left top, left bottom, from(#1FB7AF), to(#40D4CD));
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent; }

blockquote.small {
  font-size: 1.5em;
  text-align: left;
  color: #4A4A4A;
  letter-spacing: .08em;
  font-weight: 300; }

/* ==============
    MOBILE: Menu
   ============== */
nav ul {
  margin: 0;
  padding: 0;
  list-style-type: none; }
  nav ul::after {
    clear: both;
    content: "";
    display: table; }

nav a, nav a:visited {
  display: block;
  padding: 0px 0;
  line-height: 100%;
  text-align: center;
  text-decoration: none;
  font-weight: bold;
  color: #6A6969;
  font-weight: 200;
  font-size: .85rem;
  border-bottom: 2px solid transparent;
  transition: border,color .5s; }

.site-nav li.active a {
  color: #FF7172; }

.site-nav li:not(.active) a:hover {
  color: #1FB7AF;
  opacity: 1;
  border-bottom: 2px solid #1FB7AF; }

.portfolio-nav {
  padding: .5em 0;
  border-top: 1px solid #DADADA;
  border-bottom: 1px solid #DADADA;
  background: #FBFBFB;
  font-size: 1.5rem;
  overflow-x: auto; }
  .portfolio-nav li {
    width: 25%;
    float: left; }
  .portfolio-nav li a {
    color: #444444;
    font-weight: 600;
    text-transform: title;
    text-align: center; }
/* ... */

